src/solver/manysat/bindings.rs

/* automatically generated by rust-bindgen 0.59.2 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct manysat_solver_t {
    _unused: [u8; 0],
}
pub type manysat_solver = manysat_solver_t;
pub type manysat_bool = ::std::os::raw::c_int;
pub type manysat_lbool = ::std::os::raw::c_int;
pub type manysat_var = ::std::os::raw::c_int;
pub type manysat_lit = ::std::os::raw::c_int;
pub const manysat_ltrue: manysat_lbool = 1;
pub const manysat_lfalse: manysat_lbool = 0;
pub const manysat_lundef: manysat_lbool = -1;
extern "C" {
    pub fn manysat_new() -> *mut manysat_solver;
}
extern "C" {
    pub fn manysat_delete(s: *mut manysat_solver);
}
extern "C" {
    pub fn manysat_add_clause_begin(s: *mut manysat_solver);
}
extern "C" {
    pub fn manysat_add_clause_add_lit(s: *mut manysat_solver, p: manysat_lit);
}
extern "C" {
    pub fn manysat_add_clause_commit(s: *mut manysat_solver) -> manysat_bool;
}
extern "C" {
    pub fn manysat_new_lit(s: *mut manysat_solver) -> manysat_lit;
}
extern "C" {
    pub fn manysat_make_lit(x: manysat_var) -> manysat_lit;
}
extern "C" {
    pub fn manysat_negate_lit(p: manysat_lit) -> manysat_lit;
}
extern "C" {
    pub fn manysat_lit_to_var(p: manysat_lit) -> manysat_var;
}
extern "C" {
    pub fn manysat_solve(
        s: *mut manysat_solver,
        n_threads: ::std::os::raw::c_int,
        clause_limit: ::std::os::raw::c_int,
    ) -> manysat_bool;
}
extern "C" {
    pub fn manysat_model_value_var(s: *mut manysat_solver, x: manysat_var) -> manysat_lbool;
}
